--- a/src/ai/utils/config.json
+++ b/src/ai/utils/config.json
@@ -8,5 +8,6 @@
   "gamma": 0.99,
   "epsilon_greedy": 0.1,
   "log_interval": 200,
-  "checkpoint_interval": 500
+  "checkpoint_interval": 500,
+  "seed": 0
 }
