successfully transition from REST api to websockets

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pydantic = ">=1.10.7"
 pydantic_core = "*"
 uvicorn = "*"
 exceptiongroup = "*"
+websockets = "*"
 
 [dev-packages]
 matplotlib = "*"
