--- a/src/ai/utils/config.json
+++ b/src/ai/utils/config.json
@@ -1,13 +1,14 @@
 {
   "num_iterations": 2000,
-  "initial_collect_steps": 2,
+  "initial_collect_steps": 0,
   "collect_steps_per_iteration": 1,
   "batch_size": 64,
   "replay_buffer_capacity": 1000,
-  "learning_rate": 0.001,
-  "gamma": 0.99,
+  "learning_rate": 0.01,
+  "gamma": 0.95,
   "epsilon_greedy": 0.1,
   "log_interval": 200,
   "checkpoint_interval": 500,
-  "seed": 0
+  "seed": 0,
+  "entropy_regularization": 0.1
 }
