--- a/src/ai/utils/config.json
+++ b/src/ai/utils/config.json
@@ -1,6 +1,6 @@
 {
   "num_iterations": 5000,
-  "initial_collect_steps": 10,
+  "initial_collect_steps": 30,
   "collect_steps_per_iteration": 10,
   "batch_size": 32,
   "replay_buffer_capacity": 50000,
@@ -10,5 +10,6 @@
   "log_interval": 50,
   "checkpoint_interval": 500,
   "seed": 42,
-  "entropy_regularization": 0.1
+  "entropy_regularization": 0.1,
+  "initial_policy": "continuity"
 }
