--- a/src/ai/utils/config.json
+++ b/src/ai/utils/config.json
@@ -1,8 +1,8 @@
 {
   "num_iterations": 5000,
-  "initial_collect_steps": 30,
+  "initial_collect_steps": 0,
   "collect_steps_per_iteration": 10,
-  "batch_size": 32,
+  "replay_buffer_batch_size": 32,
   "replay_buffer_capacity": 50000,
   "learning_rate": 0.0003,
   "gamma": 0.97,
@@ -11,5 +11,6 @@
   "checkpoint_interval": 500,
   "seed": 42,
   "entropy_regularization": 0.1,
-  "initial_policy": "continuity"
+  "initial_policy": "continuity",
+  "env_batch_size": 16
 }
